tests/sksl/errors/ReservedNameInterface.glsl
### Compilation failed:

error: 1: expected an identifier, but found 'interface'
1 error
